# js13kgames.com

./: .env.example  .gitignore  Makefile  README.md  Readme.md  WEBSITE_TODO.md  docker-compose.yaml  package-lock.json  package.json  readme.md
.github/workflows/: deploy.yml
admin/: .forestadmin-schema.json  app.js  docker-compose.yml  package-lock.json  package.json
admin/forest/: flyway-schema-history.js  menu-items.js
admin/models/: flyway-schema-history.js  menu-items.js
admin/routes/: flyway-schema-history.js  menu-items.js
build-scripts/: build-and-deploy.sh  build-tool-images.sh
build-scripts/rust-base/: Dockerfile
build-scripts/rust-builder/: Dockerfile
build-scripts/rust-watcher/: Dockerfile
configs/: postgres.yaml
data/: schema.graphql  schema.sql
db/: schema.sql
docs/: draft.yaml
graphql/: Dockerfile
migrator/migrations/: V002__Create_update_timestamp_trigger_function.sql  V003__Add_menu_items_table.sql  V004__Add_default_menu_items.sql  V005__Add_social-links_table.sql  V006__Add_default_social-links.sql  V007__Add_hero-data_table.sql  V008__Add_default_hero-data.sql  (+22 more)
pages/: index.tsx
server/: index.ts
services/api/: Cargo.toml  Rocket.toml
services/api/src/: config.rs  juniper_rocket.rs  main.rs
services/api/src/context/: context.rs
services/api/src/model/: query.rs  user.rs
services/api/src/resolvers/: mod.rs  user_resolver.rs
services/api/src/schema/: mod.rs  mutation.rs  query.rs
services/api/src/utils/: cors.rs
web/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json
web/server/: db.ts  (+3 more)
(+161 files in other folders)
