[package]
name = "api"
version = "0.1.0"
authors = ["Michał Budzyński <michal@virtualdesign.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
mysql = "12.3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sha2="*"
juniper = "0.11"
lazy_static = "1.3.0"
frank_jwt = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates", "json"]
